sqlite and dataframes updates. USing pandas and sqlite3 to interact

--- a/Plotting_Graphs.ipynb
+++ b/Plotting_Graphs.ipynb
@@ -515,7 +515,7 @@
     "is also very important without making the graph 3d. it is a good\n",
     "idea to use size as 3rd variable\n",
     "\n",
-    "6) Histograms : when we wwant to see some\n",
+    "6) Histograms : when we wwant to see some freq distribution.\n",
     "\n",
     "\n",
     "\n",
