--- a/API/API.ipynb
+++ b/API/API.ipynb
@@ -459,6 +459,371 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "a = requests.get('https://api.openaq.org/v1/cities',params = {\"country\":\"AE\",\"limit\":1})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a.status_code)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'meta': {'name': 'openaq-api', 'license': 'CC BY 4.0', 'website': 'https://docs.openaq.org/', 'page': 1, 'limit': 1, 'found': 3}, 'results': [{'country': 'AE', 'name': 'Abu Dhabi', 'city': 'Abu Dhabi', 'count': 378699, 'locations': 1}]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://api.openaq.org/v1/cities?country=AE&limit=1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a.url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200\n",
+      "https://www.metaweather.com/api/location/search/?query=Delhi\n",
+      "[{'title': 'New Delhi', 'location_type': 'City', 'woeid': 28743736, 'latt_long': '28.643999,77.091003'}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = requests.get('https://www.metaweather.com/api/location/search/',params={\"query\":\"Delhi\"})\n",
+    "print(a.status_code)\n",
+    "\n",
+    "print(a.url)\n",
+    "print(a.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<Response [200]>\n",
+      "{\n",
+      "  \"args\": {}, \n",
+      "  \"data\": \"\", \n",
+      "  \"files\": {}, \n",
+      "  \"form\": {}, \n",
+      "  \"headers\": {\n",
+      "    \"Accept\": \"*/*\", \n",
+      "    \"Accept-Encoding\": \"gzip, deflate\", \n",
+      "    \"Content-Length\": \"0\", \n",
+      "    \"Host\": \"httpbin.org\", \n",
+      "    \"User-Agent\": \"python-requests/2.24.0\", \n",
+      "    \"X-Amzn-Trace-Id\": \"Root=1-5fe119ab-44036cce4d4eb2600420f404\"\n",
+      "  }, \n",
+      "  \"json\": null, \n",
+      "  \"origin\": \"146.196.33.57\", \n",
+      "  \"url\": \"http://httpbin.org/post\"\n",
+      "}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "response = requests.post('http://httpbin.org/post')\n",
+    "print(response)\n",
+    "print(response.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<Response [200]>\n",
+      "{\n",
+      "  \"args\": {}, \n",
+      "  \"data\": \"\", \n",
+      "  \"files\": {}, \n",
+      "  \"form\": {\n",
+      "    \"key1\": \"val1\", \n",
+      "    \"key2\": \"val2\"\n",
+      "  }, \n",
+      "  \"headers\": {\n",
+      "    \"Accept\": \"*/*\", \n",
+      "    \"Accept-Encoding\": \"gzip, deflate\", \n",
+      "    \"Content-Length\": \"19\", \n",
+      "    \"Content-Type\": \"application/x-www-form-urlencoded\", \n",
+      "    \"Host\": \"httpbin.org\", \n",
+      "    \"User-Agent\": \"python-requests/2.24.0\", \n",
+      "    \"X-Amzn-Trace-Id\": \"Root=1-5fe119ee-341c5ede22dc458656f30802\"\n",
+      "  }, \n",
+      "  \"json\": null, \n",
+      "  \"origin\": \"146.196.33.57\", \n",
+      "  \"url\": \"http://httpbin.org/post\"\n",
+      "}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "response = requests.post('http://httpbin.org/post',data={'key1':'val1','key2':'val2'})\n",
+    "print(response)\n",
+    "print(response.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<Response [200]>\n",
+      "{\n",
+      "  \"args\": {}, \n",
+      "  \"data\": \"\", \n",
+      "  \"files\": {}, \n",
+      "  \"form\": {\n",
+      "    \"key1\": [\n",
+      "      \"val1\", \n",
+      "      \"val3\"\n",
+      "    ], \n",
+      "    \"key2\": \"val2\"\n",
+      "  }, \n",
+      "  \"headers\": {\n",
+      "    \"Accept\": \"*/*\", \n",
+      "    \"Accept-Encoding\": \"gzip, deflate\", \n",
+      "    \"Content-Length\": \"29\", \n",
+      "    \"Content-Type\": \"application/x-www-form-urlencoded\", \n",
+      "    \"Host\": \"httpbin.org\", \n",
+      "    \"User-Agent\": \"python-requests/2.24.0\", \n",
+      "    \"X-Amzn-Trace-Id\": \"Root=1-5fe11a2f-4529ab0e57b109c855965c45\"\n",
+      "  }, \n",
+      "  \"json\": null, \n",
+      "  \"origin\": \"146.196.33.57\", \n",
+      "  \"url\": \"http://httpbin.org/post\"\n",
+      "}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "response = requests.post('http://httpbin.org/post',data={'key1':['val1','val3'],'key2':'val2'})\n",
+    "print(response)\n",
+    "print(response.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<Response [200]>\n",
+      "{\n",
+      "  \"args\": {}, \n",
+      "  \"data\": \"\", \n",
+      "  \"files\": {}, \n",
+      "  \"form\": {\n",
+      "    \"key1\": \"val1\", \n",
+      "    \"key2\": \"val2\", \n",
+      "    \"key3\": \"val3\"\n",
+      "  }, \n",
+      "  \"headers\": {\n",
+      "    \"Accept\": \"*/*\", \n",
+      "    \"Accept-Encoding\": \"gzip, deflate\", \n",
+      "    \"Content-Length\": \"29\", \n",
+      "    \"Content-Type\": \"application/x-www-form-urlencoded\", \n",
+      "    \"Host\": \"httpbin.org\", \n",
+      "    \"User-Agent\": \"python-requests/2.24.0\", \n",
+      "    \"X-Amzn-Trace-Id\": \"Root=1-5fe11a93-467ff99b3bde09570af85cd3\"\n",
+      "  }, \n",
+      "  \"json\": null, \n",
+      "  \"origin\": \"146.196.33.57\", \n",
+      "  \"url\": \"http://httpbin.org/post\"\n",
+      "}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# using tuples within data\n",
+    "response = requests.post('http://httpbin.org/post',data=[('key1','val1'),('key2','val2'),('key3','val3')])\n",
+    "print(response)\n",
+    "print(response.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<Response [201]>\n",
+      "{\n",
+      "  \"userId\": \"2\",\n",
+      "  \"<built-in function id>\": \"200\",\n",
+      "  \"title\": \"test\",\n",
+      "  \"id\": 101\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "r = requests.post('https://jsonplaceholder.typicode.com/posts',data={'userId':2,id:200,'title':'test'})\n",
+    "print(r)\n",
+    "print(r.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "from requests.auth import HTTPBasicAuth \n",
+    "\n",
+    "r = requests.get('https://api.github.com')\n",
+    "print(r.status_code)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#reddit api\n",
+    "\n",
+    "# client id : rahAx52irpR6rw\n",
+    "# secret : uus-QTK3on8GMtbGHcahphKh1_U7Ww\n",
+    "\n",
+    "import requests\n",
+    "import json\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://www.reddit.com/api/v1/authorize?client_id=rahAx52irpR6rw&response_type=code&state=random&redirect_uri=https%3A%2F%2Fwww.google.com&scope=read\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "data = {'client_id' : 'rahAx52irpR6rw','response_type':'code','state':'random','redirect_uri':\"https://www.google.com\",'scope':'read'}\n",
+    "\n",
+    "r = requests.get('https://www.reddit.com/api/v1/authorize',params=data)\n",
+    "print(r.url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# code=FUW0jWahqneFdUGdX1My1C_u1nZxMw\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"error\": \"invalid_grant\"}\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = {'grant_type':'authorization_code','code':'FUW0jWahqneFdUGdX1My1C_u1nZxMw','redirect_uri':'https://www.google.com'}\n",
+    "\n",
+    "r1 = requests.post('https://www.reddit.com/api/v1/access_token',data = data,auth = ('rahAx52irpR6rw','uus-QTK3on8GMtbGHcahphKh1_U7Ww'),headers = {'User-Agent' : 'Shubham'} )\n",
+    "print(r1.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -481,7 +846,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
